crates/kula-lsp/src/features/snapshots/kula_lsp__features__completion__tests__snapshot_after_birth_keyword.snap
---
source: crates/kula-lsp/src/features/completion.rs
expression: items
---
[
  {
    "label": "m_alice_bob",
    "kind": 23,
    "detail": "Alice + Bob, 1972–1990"
  }
]
