crates/kula-lsp/src/features/snapshots/kula_lsp__features__completion__tests__snapshot_after_gender_colon.snap
---
source: crates/kula-lsp/src/features/completion.rs
assertion_line: 627
expression: items
---
[
  {
    "label": "male",
    "kind": 20,
    "detail": "Male"
  },
  {
    "label": "female",
    "kind": 20,
    "detail": "Female"
  },
  {
    "label": "other",
    "kind": 20,
    "detail": "Non-binary or unspecified"
  }
]
