crates/kula-lsp/src/features/snapshots/kula_lsp__features__completion__tests__snapshot_after_marriage_id_for_spouse_a.snap
---
source: crates/kula-lsp/src/features/completion.rs
expression: items
---
[
  {
    "label": "alice",
    "kind": 6,
    "detail": "Alice, b. 1950"
  },
  {
    "label": "bob",
    "kind": 6,
    "detail": "Bob, b. 1948"
  }
]
