crates/kula-lsp/src/features/snapshots/kula_lsp__features__completion__tests__snapshot_top_level.snap
---
source: crates/kula-lsp/src/features/completion.rs
assertion_line: 617
expression: items
---
[
  {
    "label": "kula",
    "kind": 14,
    "detail": "Set the language version (must be the first line)"
  },
  {
    "label": "person",
    "kind": 14,
    "detail": "Declare an individual (name, gender, dates)"
  },
  {
    "label": "marriage",
    "kind": 14,
    "detail": "Declare a marriage between two people"
  }
]
